# zephyr-fota

./: .gitignore  .uhu  e4d37cfe6ec48a2d069cc0bbb8b078677e9a0d8df3a027c4d8ea131130c4265f-2.0.0.uhupkg  env-setup.sh  hello-coap.py  output.txt  requirements.txt  run.sh  setup-env.sh
.west/: config
apps/: CMakeLists.txt  west.yml
apps/app-adaptive-modem/: CMakeLists.txt  prj.conf
apps/app-adaptive-modem/boards/: esp32-overlay.dts
apps/app-adaptive-modem/src/: adaptive-sockets.c  main.c
apps/app-adaptive-request/: prj.conf
apps/app-adaptive-request/boards/: esp32-overlay.dts
apps/app-adaptive-request/include/: adaptive-sockets.h  init-wifi.h
apps/app-adaptive-request/src/: adaptive-sockets.c  init-wifi.c  main.c
apps/app-adaptive-update/: Kconfig  prj.conf
apps/app-adaptive-update/boards/: esp32-overlay.dts
apps/app-adaptive-update/src/: adaptive-sockets.c  main.c
apps/app-adaptive-wifi/: Kconfig
apps/app-adaptive-wifi/src/: main.c
apps/app-cellular-hello/: prj.conf
apps/app-cellular-hello-world/: CMakeLists.txt
apps/app-cellular-hello-world/src/: main.c
apps/app-cellular-hello/boards/: esp32-overlay.dts
apps/app-cellular-update/: CMakeLists.txt  prj.conf
apps/app-cellular-update/boards/: esp32-overlay.dts
apps/app-cellular-update/src/: main.c
apps/app-example/: CMakeLists.txt
apps/app-example/src/: main.c
apps/app-hello-world/: CMakeLists.txt  prj.conf
apps/app-wifi-test/: CMakeLists.txt
apps/app-wifi-update/: CMakeLists.txt  prj.conf
apps/drivers/: CMakeLists.txt  Kconfig
apps/lib/: CMakeLists.txt  Kconfig
(+18 files in other folders)
